import com.vanniktech.maven.publish.SonatypeHost

buildscript {
  dependencies {
    classpath 'com.palantir.javaformat:gradle-palantir-java-format:2.72.0'
  }
}

plugins {
  id 'java-library'
  id 'com.google.protobuf' version '0.9.4'
  id 'maven-publish'
  id 'signing'
  id 'jacoco'
  id 'com.diffplug.spotless' version '6.25.0'
  id 'com.vanniktech.maven.publish' version '0.33.0'
}

allprojects {
  apply plugin: 'com.palantir.java-format'
}

group = 'io.github.panghy'
version = '0.1.0-SNAPSHOT'

java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

repositories {
  mavenCentral()
}

dependencies {
  // FoundationDB
  implementation 'org.foundationdb:fdb-java:7.3.27'

  // OpenTelemetry
  implementation 'io.opentelemetry:opentelemetry-api:1.40.0'
  implementation 'io.opentelemetry:opentelemetry-context:1.40.0'

  // TaskQueue
  implementation 'io.github.panghy:taskqueue:0.1.0'

  // Protobuf
  implementation 'com.google.protobuf:protobuf-java:4.28.2'

  // Caffeine cache
  implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

  // Logging
  implementation 'org.slf4j:slf4j-api:2.0.9'

  // Lombok
  compileOnly 'org.projectlombok:lombok:1.18.28'
  annotationProcessor 'org.projectlombok:lombok:1.18.28'

  // Testing
  testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  testImplementation 'org.assertj:assertj-core:3.25.1'

  testImplementation 'org.mockito:mockito-core:5.19.0'
  testImplementation 'org.mockito:mockito-junit-jupiter:5.19.0'
}

protobuf {
  protoc {
    artifact = 'com.google.protobuf:protoc:3.25.1'
  }
}

sourceSets {
  main {
    proto {
      srcDir 'src/main/proto'
    }
  }
}

test {
  useJUnitPlatform()
  finalizedBy jacocoTestReport
}

// Ensure proto compilation happens before Java compilation
compileJava.dependsOn 'generateProto'

// Handle duplicate proto files in resources
tasks.processResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Spotless configuration with Palantir Java Format
spotless {
  java {
    target 'src/**/*.java'
    targetExclude 'build/**'
    indentWithTabs(4)
    indentWithSpaces(2)
    removeUnusedImports()
    trimTrailingWhitespace()
    endWithNewline()
  }
}

compileJava.dependsOn 'spotlessApply'

// JaCoCo configuration
jacoco {
  toolVersion = "0.8.13"
}

jacocoTestReport {
  dependsOn test
  reports {
    xml.required = true
    html.required = true
  }
  afterEvaluate {
    classDirectories.setFrom(files(classDirectories.files.collect {
      fileTree(dir: it, exclude: [
          '**/proto/**',  // Exclude generated protobuf classes
      ])
    }))
  }
}

jacocoTestCoverageVerification {
  afterEvaluate {
    classDirectories.setFrom(files(classDirectories.files.collect {
      fileTree(dir: it, exclude: [
          '**/proto/**',  // Exclude generated protobuf classes
      ])
    }))
  }
  violationRules {
    rule {
      limit {
        counter = 'LINE'
        value = 'COVEREDRATIO'
        minimum = 0.90 // 90% line coverage
      }
      limit {
        counter = 'BRANCH'
        value = 'COVEREDRATIO'
        minimum = 0.75 // 75% branch coverage
      }
    }
  }
}

check.dependsOn jacocoTestCoverageVerification

// Maven publishing configuration
mavenPublishing {
  publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL)
  signAllPublications()

  pom {
    name = 'VectorSearch'
    description = 'A distributed vector search library backed by FoundationDB'
    url = 'https://github.com/panghy/vectorsearch'

    licenses {
      license {
        name = 'The Apache License, Version 2.0'
        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
      }
    }

    developers {
      developer {
        id = 'panghy'
        name = 'Clement Pang'
        email = 'panghy@users.noreply.github.com'
      }
    }

    scm {
      connection = 'scm:git:git://github.com/panghy/vectorsearch.git'
      developerConnection = 'scm:git:ssh://github.com:panghy/vectorsearch.git'
      url = 'https://github.com/panghy/vectorsearch'
    }
  }
}